Switch to hole-tracking memory allocator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ multiboot2  = "0.1.0"
 bitflags    = "0.9.1"
 x86_64      = "0.1.2"
 
-[dependencies.bump_allocator]
-path = "libs/bump_allocator"
+[dependencies.hole_tracking_allocator]
+path = "libs/hole_tracking_allocator"
