--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -13,7 +13,7 @@ rlibc       = "1.0"
 volatile    = "0.1.0"
 spin        = "0.4.5"
 multiboot2  = "0.3.2"
-bitflags    = "0.9.1"
+bitflags    = "*"
 bit_field   = "0.7.0"
 x86_64      = "0.1.2"
 
