--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,16 +9,22 @@ authors = ["Isaac Woods"]
 crate-type = ["staticlib"]
 
 [dependencies]
-rlibc       = "1.0"
-volatile    = "0.1.0"
-spin        = "0.4.5"
-multiboot2  = "0.3.2"
+#rlibc       = "1.0"
+#volatile    = "0.1.0"
+#spin        = "0.4.5"
+#multiboot2  = "0.3.2"
 bitflags    = "*"
-bit_field   = "0.7.0"
-x86_64      = "0.1.2"
+#bit_field   = "0.7.0"
+#x86_64      = "0.1.2"
+rlibc       = "*"
+volatile    = "*"
+spin        = "*"
+multiboot2  = "*"
+bit_field   = "*"
+x86_64      = "*"
 
 [dependencies.lazy_static]
-version = "0.2.4"
+version = "*"
 features = ["spin_no_std"]
 
 [dependencies.rustos_common]
