--- a/kernel/hole_tracking_allocator/Cargo.toml
+++ b/kernel/hole_tracking_allocator/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Isaac Woods <isaacwoods.home@gmail.com>"]
 
 [dependencies]
-spin = "0.4.5"
+#spin = "0.4.5"
+spin = "*"
 
 [dependencies.rustos_common]
 path = "../rustos_common"
