Move multiboot2 crate into our codebase
We will need to make some changes to the way we read the Multiboot header, and so have decided to move
the entire crate into our codebase. Hopefully some changes can be merged upstream at a later date, when
the solution is more finalised.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,7 +12,6 @@ crate-type = ["staticlib"]
 rlibc       = "*"
 volatile    = "*"
 spin        = "*"
-multiboot2  = "*"
 bitflags    = "*"
 bit_field   = "*"
 x86_64      = "*"
@@ -20,6 +19,9 @@ x86_64      = "*"
 [dependencies.lazy_static]
 version = "*"
 features = ["spin_no_std"]
+
+[dependencies.multiboot2]
+path = "multiboot2"
 
 [dependencies.rustos_common]
 path = "rustos_common"
