--- a/kernel/multiboot2/Cargo.toml
+++ b/kernel/multiboot2/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "multiboot2"
-version = "0.3.2"
-authors = ["Philipp Oppermann <dev@phil-opp.com>", "Calvin Lee <cyrus296@gmail.com>"]
-license = "MIT/Apache-2.0"
-description = "An experimental Multiboot 2 crate for ELF-64 kernels."
+version = "0.0.1"
+authors = ["Philipp Oppermann <dev@phil-opp.com>",
+           "Calvin Lee <cyrus296@gmail.com>",
+           "Isaac Woods"]
+license = "MIT"
+description = "Reads information from the Multiboot2 structure an ELF64 kernel"
 
 [dependencies.bitflags]
 version = "0.4.0"
