Migrate x86_64 into a separate crate, merge multiboot2 into it
I thought it might work better if `x86_64` was a separate crate, rather than a module, so `multiboot2` could depend on it and use things like PhysicalAddress and VirtualAddress. However, this would've created a circular dependency so I had to merge `multiboot2` into the `x86_64` crate. At this rate, it would've probably been simpler to just merge `multiboot2` into the main kernel crate, but there we go.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -15,11 +15,8 @@ spin        = "*"
 bitflags    = "*"
 bit_field   = "*"
 
-[dependencies.multiboot2]
-path = "multiboot2"
+[dependencies.x86_64]
+path = "x86_64"
 
 [dependencies.rustos_common]
 path = "rustos_common"
-
-[dependencies.hole_tracking_allocator]
-path = "hole_tracking_allocator"
