--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,12 +1,12 @@
 # Copyright (C) 2017, Isaac Woods.
 # See LICENCE.md
 
-LINKER_SCRIPT=src/$(ARCH)/linker.ld
+LINKER_SCRIPT=$(ARCH)/linker.ld
 LFLAGS:=-n --gc-sections -T $(LINKER_SCRIPT)
 
 ASM_FLAGS:=-felf64 -Fdwarf -g
-ASM_SOURCES:=$(wildcard src/$(ARCH)/*.s)
-ASM_OBJS:=$(patsubst src/$(ARCH)/%.s, $(BUILD_DIR)/$(ARCH)/%.o, $(ASM_SOURCES))
+ASM_SOURCES:=$(wildcard $(ARCH)/src/*.s)
+ASM_OBJS:=$(patsubst $(ARCH)/src/%.s, $(BUILD_DIR)/$(ARCH)/%.o, $(ASM_SOURCES))
 
 .PHONY: kernel clean
 
@@ -17,7 +17,7 @@ $(BUILD_DIR)/kernel.bin: $(ASM_OBJS) kernel $(LINKER_SCRIPT)
 kernel:
 	RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(ARCH)-rustos
 
-$(BUILD_DIR)/$(ARCH)%.o: src/$(ARCH)%.s
+$(BUILD_DIR)/$(ARCH)%.o: $(ARCH)/src/%.s
 	mkdir -p $(shell dirname $@)
 	nasm $(ASM_FLAGS) $< -o $@
 
