Rename rustos_common to util and re-add uses of asser_firt_call

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -18,5 +18,5 @@ bit_field   = "*"
 [dependencies.x86_64]
 path = "x86_64"
 
-[dependencies.rustos_common]
-path = "rustos_common"
+[dependencies.util]
+path = "util"
