--- a/kernel/hole_tracking_allocator/Cargo.toml
+++ b/kernel/hole_tracking_allocator/Cargo.toml
@@ -6,5 +6,5 @@ authors = ["Isaac Woods <isaacwoods.home@gmail.com>"]
 [dependencies]
 spin = "*"
 
-[dependencies.rustos_common]
-path = "../rustos_common"
+[dependencies.util]
+path = "../util"
