Log stuff on COM1 with the 'log' crate

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -15,6 +15,10 @@ spin        = "*"
 bitflags    = "*"
 bit_field   = "*"
 
+[dependencies.log]
+version             = "*"
+default-features    = false
+
 [dependencies.x86_64]
 path = "x86_64"
 
