--- a/grub.cfg
+++ b/grub.cfg
@@ -1,7 +1,7 @@
 set timeout=3
 set default=0
 
-menuentry "OS" {
+menuentry "Pebble" {
   multiboot2 /boot/kernel.bin
   module2 /test_program.bin /test_program.bin
   boot
