Add README to kernel directory for overview

--- a/kernel/x86_64/Makefile
+++ b/kernel/x86_64/Makefile
@@ -12,7 +12,7 @@ ASM_OBJS:=$(patsubst src/%.s, $(BUILD_DIR)/$(ARCH)/%.o, $(ASM_SOURCES))
 
 $(BUILD_DIR)/kernel.bin: $(ASM_OBJS) kernel $(LINKER_SCRIPT)
 	mkdir -p $(BUILD_DIR)/iso/boot/grub
-	ld $(LFLAGS) -o $@ $(ASM_OBJS) target/$(ARCH)-pebble/debug/libkernel_$(ARCH).a
+	ld $(LFLAGS) -o $@ $(ASM_OBJS) target/$(ARCH)-pebble/debug/lib$(ARCH).a
 
 kernel:
 	RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(ARCH)-pebble
