--- a/kernel/x86_64/Cargo.toml
+++ b/kernel/x86_64/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 
 [package]
-name = "kernel_x86_64"
+name = "x86_64"
 version = "0.0.1"
 authors = ["Isaac Woods <isaacwoods.home@gmail.com>",
            "Philipp Oppermann <dev@phil-opp.com>",
