--- a/grub.cfg
+++ b/grub.cfg
@@ -3,6 +3,6 @@ set default=0
 
 menuentry "Pebble" {
   multiboot2 /boot/kernel.bin
-  module2 /test_program.bin /test_program.bin
+  module2 /flat_binary.bin flat_binary
   boot
 }
