Fix ACPI bug and bug in physical mapping code

--- a/hole_tracking_allocator/Cargo.toml
+++ b/hole_tracking_allocator/Cargo.toml
@@ -6,5 +6,9 @@ authors = ["Isaac Woods <isaacwoods.home@gmail.com>"]
 [dependencies]
 spin = "*"
 
+[dependencies.log]
+version                 = "*"
+default-features        = false
+
 [dependencies.kernel]
 path = ".."
