Fix a whole bunch of clippy lints

--- a/x86_64/Makefile
+++ b/x86_64/Makefile
@@ -1,21 +1,25 @@
 # Copyright (C) 2017, Isaac Woods.
 # See LICENCE.md
 
-LINKER_SCRIPT=linker.ld
-LFLAGS:=-n --gc-sections -T $(LINKER_SCRIPT)
+LINKER_SCRIPT = linker.ld
+LFLAGS :=-n --gc-sections -T $(LINKER_SCRIPT)
+TARGET := $(ARCH)-pebble-kernel
 
 ASM_FLAGS:=-felf64 -Fdwarf -g
 ASM_SOURCES:=$(wildcard src/*.s)
 ASM_OBJS:=$(patsubst src/%.s, $(BUILD_DIR)/$(ARCH)/%.o, $(ASM_SOURCES))
 
-.PHONY: kernel clean
+.PHONY: kernel clippy clean
 
 $(BUILD_DIR)/kernel.bin: $(ASM_OBJS) kernel $(LINKER_SCRIPT)
 	mkdir -p $(BUILD_DIR)/iso/boot/grub
-	ld $(LFLAGS) -o $@ $(ASM_OBJS) target/$(ARCH)-pebble/debug/lib$(ARCH).a
+	ld $(LFLAGS) -o $@ $(ASM_OBJS) target/$(TARGET)/debug/lib$(ARCH).a
 
 kernel:
-	RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(ARCH)-pebble-kernel
+	RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(TARGET)
+
+clippy:
+	RUST_TARGET_PATH="$(shell pwd)" xargo clippy --target=$(TARGET)
 
 $(BUILD_DIR)/$(ARCH)%.o: src%.s
 	mkdir -p $(shell dirname $@)
