--- a/x86_64/Makefile
+++ b/x86_64/Makefile
@@ -9,17 +9,14 @@ ASM_FLAGS:=-felf64 -Fdwarf -g
 ASM_SOURCES:=$(wildcard src/*.s)
 ASM_OBJS:=$(patsubst src/%.s, $(BUILD_DIR)/$(ARCH)/%.o, $(ASM_SOURCES))
 
-.PHONY: kernel clippy clean
+.PHONY: kernel clean
 
 $(BUILD_DIR)/kernel.bin: $(ASM_OBJS) kernel $(LINKER_SCRIPT)
 	mkdir -p $(BUILD_DIR)/iso/boot/grub
 	ld $(LFLAGS) -o $@ $(ASM_OBJS) target/$(TARGET)/debug/lib$(ARCH).a
 
 kernel:
-	RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(TARGET)
-
-clippy:
-	RUST_TARGET_PATH="$(shell pwd)" xargo clippy --target=$(TARGET)
+	RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(TARGET) --features "clippy"
 
 $(BUILD_DIR)/$(ARCH)%.o: src%.s
 	mkdir -p $(shell dirname $@)
