Move to using multiboot2 crate

--- a/kernel/x86_64/Cargo.toml
+++ b/kernel/x86_64/Cargo.toml
@@ -28,6 +28,9 @@ default-features        = false
 [dependencies.heap_allocator]
 path = "../heap_allocator"
 
+[dependencies.multiboot2]
+path = "../multiboot2"
+
 [dependencies.kernel]
 path = ".."
 
