Format all the things

--- a/kernel/x86_64/Makefile
+++ b/kernel/x86_64/Makefile
@@ -16,7 +16,8 @@ $(BUILD_DIR)/kernel.bin: $(ASM_OBJS) kernel $(LINKER_SCRIPT)
 	ld $(LFLAGS) -o $@ $(ASM_OBJS) target/$(TARGET)/debug/lib$(ARCH).a
 
 kernel:
-	RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(TARGET) --features "clippy"
+	# RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(TARGET) --features "clippy"
+	RUST_TARGET_PATH="$(shell pwd)" xargo build --target=$(TARGET)
 
 $(BUILD_DIR)/$(ARCH)%.o: src%.s
 	mkdir -p $(shell dirname $@)
