--- a/kernel/x86_64/Cargo.toml
+++ b/kernel/x86_64/Cargo.toml
@@ -3,7 +3,7 @@
 [package]
 name = "x86_64"
 version = "0.0.1"
-authors = ["Isaac Woods <isaacwoods.home@gmail.com>",
+authors = ["Isaac Woods <isaac@isaacwoods.tk>",
            "Philipp Oppermann <dev@phil-opp.com>",
            "Calvin Lee <cyrus296@gmail.com>"]
 
