--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -16,3 +16,6 @@ default-features    = false
 
 [dependencies.heap_allocator]
 path = "heap_allocator"
+
+[dependencies.libmessage]
+path = "../libmessage"
