Remove dependency on rlibc

--- a/kernel/x86_64/Cargo.toml
+++ b/kernel/x86_64/Cargo.toml
@@ -10,8 +10,10 @@ authors = ["Isaac Woods <isaac@isaacwoods.tk>",
 [lib]
 crate-type = ["staticlib"]
 
+[package.metadata.cargo-xbuild]
+memcpy = true
+
 [dependencies]
-rlibc                   = "*"
 bitflags                = "*"
 bit_field               = "*"
 volatile                = "*"
