Fmt and new node managing code - slightly nicer

--- a/kernel/x86_64/Cargo.toml
+++ b/kernel/x86_64/Cargo.toml
@@ -33,3 +33,7 @@ path = ".."
 
 [dependencies.common]
 path = "../common"
+
+[dependencies.libmessage]
+path = "../../libmessage"
+features = ["kernel"]
