--- a/libmessage/Cargo.toml
+++ b/libmessage/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["Isaac Woods <isaac@isaacwoods.tk>"]
 
 [dependencies]
+bytes_iter = "*"
+
+[features]
+default = []
+kernel = []
