--- a/test_rust/Cargo.toml
+++ b/test_rust/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "test_rust"
 version = "0.1.0"
-authors = ["Isaac Woods"]
+authors = ["Isaac Woods <isaac@isaacwoods.tk>"]
 
 [dependencies]
 
