Update Rust submodule and only clone last 10 commits on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ sudo: required
 rust:
   - nightly
 
+git:
+  depth: 10
+
 install:
   - sudo apt-get install nasm
   - sudo apt-get install grub2 grub2-common grub-common
