--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,6 +8,12 @@ volatile                = "*"
 spin                    = "*"
 bitflags                = "*"
 bit_field               = "*"
+serde_derive            = "1.0"
+
+[dependencies.serde]
+version = "1.0"
+default-features = false
+features = ["alloc"]
 
 [dependencies.log]
 version             = "*"
