--- a/libmessage/Cargo.toml
+++ b/libmessage/Cargo.toml
@@ -5,6 +5,12 @@ authors = ["Isaac Woods <isaac@isaacwoods.tk>"]
 
 [dependencies]
 bytes_iter = "*"
+serde_derive = "1.0"
+
+[dependencies.serde]
+version = "1.0"
+default-features = false
+features = []
 
 [features]
 default = []
