--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,3 +1,12 @@
+[workspace]
+members = [
+    "acpi",
+    "common",
+    "heap_allocator",
+    "multiboot2",
+    "x86_64",
+]
+
 [package]
 name = "kernel"
 version = "0.0.1"
