[boot] Rework Pool and read files from UEFI
* Rework `Pool` to access the system table globally
* Add a `read_file` function to read files using the SimpleFileSystem
protocol

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -7,9 +7,9 @@ image.img:
 	parted image.img -s -a minimal mklabel gpt
 	parted image.img -s -a minimal mkpart EFI FAT16 2048s 93716s
 	parted image.img -s -a minimal toggle 1 boot
-	# Create a temporary image file for the EFI partition
-	dd if=/dev/zero of=efi.img bs=512 count=91669
-	mformat -i efi.img -h 32 -t 32 -n 64 -c 1
+	# Create a temporary image file for the EFI FAT partition
+	dd if=/dev/zero of=efi.img bs=1M count=64
+	mkfs.vfat -F 32 efi.img -n Boot
 	# Copy the bootloader over and merge the images
 	mcopy -i efi.img target/uefi_x64/release/bootloader.efi ::boot.efi
 	mcopy -i efi.img test.txt ::
