[boot] Add OVMF binaries and use them
* Add OVMF code and vars binaries for QEMU
* Put bootloader .efi in the correct place
* Set up NVRAM boot option for Pebble and set it to boot

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -1,4 +1,4 @@
-.PHONY: image.img qemu
+.PHONY: qemu
 
 image.img:
 	cargo xbuild --release --target uefi_x64.json
@@ -11,10 +11,14 @@ image.img:
 	dd if=/dev/zero of=efi.img bs=1M count=64
 	mkfs.vfat -F 32 efi.img -n Boot
 	# Copy the bootloader over and merge the images
-	mcopy -i efi.img target/uefi_x64/release/bootloader.efi ::boot.efi
+	mcopy -i efi.img target/uefi_x64/release/bootloader.efi ::/EFI/BOOT/BOOTX64.efi
 	mcopy -i efi.img test.txt ::
 	dd if=efi.img of=image.img bs=512 count=91669 seek=2048 conv=notrunc
 	rm efi.img
 
 qemu: image.img
-	qemu-system-x86_64 -bios ../ovmf/OVMF-pure-efi.fd -drive file=image.img,if=ide -net none
+	qemu-system-x86_64 \
+		-drive if=pflash,format=raw,file=OVMF_CODE-pure-efi.fd,readonly=on \
+		-drive if=pflash,format=raw,file=OVMF_VARS-pure-efi.fd,readonly=off \
+		-drive format=raw,file=image.img,if=ide \
+		-net none
