[kernel] General clean up

--- a/kernel/x86_64/Cargo.toml
+++ b/kernel/x86_64/Cargo.toml
@@ -27,6 +27,7 @@ path = "../heap_allocator"
 
 [dependencies.acpi]
 path = "../acpi"
+features = ["debug_parser"]
 
 [dependencies.kernel]
 path = ".."
