--- a/bootloader/Cargo.toml
+++ b/bootloader/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 fixedvec = "0.2"
 bitflags = "1"
+xmas-elf = "0.6"
+x86_64 = { path = "../x86_64" }
 
 [profile.release]
 debug = true
