[build kernel] Add new Makefile and minimal kernel Prepare the kernel to be booted by the new bootloader by removing basically all its functionality for now. Once we add the required functionality to the UEFI bootloader, we can re-add all the stuff to the kernel slowly to make sure we haven't broken anything.
This is mainly to get CI to build successfully so we can begin working
towards merging the bootloader PR.

--- a/kernel/x86_64/Cargo.toml
+++ b/kernel/x86_64/Cargo.toml
@@ -22,6 +22,9 @@ xmas-elf                = "*"
 version                 = "*"
 default-features        = false
 
+[dependencies.x86_64]
+path = "../../x86_64"
+
 [dependencies.heap_allocator]
 path = "../heap_allocator"
 
