--- a/kernel/x86_64/Cargo.toml
+++ b/kernel/x86_64/Cargo.toml
@@ -30,7 +30,6 @@ path = "../heap_allocator"
 
 [dependencies.acpi]
 path = "../acpi"
-features = ["debug_parser"]
 
 [dependencies.kernel]
 path = ".."
@@ -38,6 +37,6 @@ path = ".."
 [dependencies.common]
 path = "../common"
 
-[dependencies.libmessage]
-path = "../../libmessage"
-features = ["kernel"]
+# [dependencies.libmessage]
+# path = "../../libmessage"
+# features = ["kernel"]
