--- a/bootloader/Cargo.toml
+++ b/bootloader/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 fixedvec = "0.2"
 bitflags = "1"
-xmas-elf = "0.6"
+mer = "0.2"
 x86_64 = { path = "../x86_64" }
 
 [profile.release]
