[kernel] Write over-engineered flooring_log2 and commit other util stuff

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -11,6 +11,11 @@ crate-type = ["staticlib"]
 cfg-if = "0.1"
 bitflags = "1"
 bit_field = "0.9"
+num-traits = { version = "0.2", default-features = false }
 log = { version = "0.4", default-features = false }
 spin = "0.4"
 x86_64 = { path = "../x86_64", optional = true }
+
+[features]
+arch_x86_64 = ["x86_64"]
+tuning-fast_ctlz = []
