--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -13,7 +13,7 @@ bitflags = "1"
 bit_field = "0.9"
 num-traits = { version = "0.2", default-features = false }
 log = { version = "0.4", default-features = false }
-spin = "0.4"
+spin = { path = "../spin" }
 x86_64 = { path = "../x86_64", optional = true }
 
 [features]
