--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,7 +14,7 @@ bit_field = "0.9"
 spin = "0.4"
 log = { version = "0.4", default-features = false }
 x86_64 = { path = "../x86_64", optional = true }
-acpi = { path = "../acpi", optional = true }
+acpi = { path = "../acpi", optional = true, features = ["debug_parser"] }
 num = { version = "0.2", default-features = false }
 
 [features]
