[x86_64] Revise GDT structures and loading

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -13,7 +13,7 @@ bitflags = "1"
 bit_field = "0.9"
 spin = "0.4"
 log = { version = "0.4", default-features = false }
-x86_64 = { path = "../x86_64", optional = true }
+x86_64 = { path = "../x86_64", features = ["kernel"], optional = true }
 acpi = { path = "../acpi", optional = true, features = ["debug_parser"] }
 num = { version = "0.2", default-features = false }
 
