[boot] Move to using ThinLTO on the bootloader
Looks like the new nightly is failing because rustc no longer supports
incremental compilation + classic LTO. Using ThinLTO does produce a
larger release-mode executable, so we probably need to look at that in
the future again, but this should fix master.

--- a/bootloader/Cargo.toml
+++ b/bootloader/Cargo.toml
@@ -12,7 +12,7 @@ x86_64 = { path = "../x86_64" }
 
 [profile.release]
 debug = true
-lto = true
+lto = "thin"
 
 [package.metadata.cargo-xbuild]
 memcpy = true
