--- a/userboot/Cargo.toml
+++ b/userboot/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
+libmessage = { path = "../libmessage" }
 
 [profile.dev]
 debug = false
