[kernel bootloader userboot] Update Cargo.lock files

--- a/libmessage/Cargo.toml
+++ b/libmessage/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
+serde = { version = "1.0", default-features = false, features = ["derive"] }
