[libpebble kernel userboot] Create libpebble and move userboot and kernel to it

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -17,7 +17,7 @@ x86_64 = { path = "../x86_64", features = ["kernel"], optional = true }
 # acpi = { path = "../acpi", optional = true, features = ["debug_parser"] }
 acpi = { path = "../acpi", optional = true }
 num = { version = "0.2", default-features = false }
-libmessage = { path = "../libmessage" }
+libpebble = { path = "../libpebble" }
 
 [features]
 arch_x86_64 = ["x86_64", "acpi"]
