--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -13,12 +13,12 @@ bitflags = "1"
 bit_field = "0.9"
 spin = "0.4"
 log = { version = "0.4", default-features = false }
-x86_64 = { path = "../x86_64", features = ["kernel"], optional = true }
-# acpi = { path = "../acpi", optional = true, features = ["debug_parser"] }
-acpi = { path = "../acpi", optional = true }
+x86_64 = { path = "../lib/x86_64", features = ["kernel"], optional = true }
 num = { version = "0.2", default-features = false }
-libpebble = { path = "../libpebble" }
+libpebble = { path = "../lib/libpebble" }
+acpi = { path = "../lib/acpi/acpi", optional = true }
+aml_parser = { path = "../lib/acpi/aml_parser", optional = true }
 
 [features]
-arch_x86_64 = ["x86_64", "acpi"]
+arch_x86_64 = ["x86_64", "acpi", "aml_parser"]
 tuning-fast_ctlz = []
