Move `mer` in-tree
`mer` is a library for parsing ELF files that previously had its own repo.
I've decided to move these sort of small libraries in-tree to make
development easier.

--- a/bootloader/Cargo.toml
+++ b/bootloader/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 fixedvec = "0.2"
 bitflags = "1"
-mer = "0.2"
+mer = { path = "../lib/mer" }
 x86_64 = { path = "../lib/x86_64" }
 log = "0.4"
 
