--- a/lib/x86_64/Cargo.toml
+++ b/lib/x86_64/Cargo.toml
@@ -9,6 +9,7 @@ bitflags = "1"
 bit_field = "0.9"
 cfg-if = "0.1"
 log = "0.4"
+pebble_util = { path = "../pebble_util" }
 
 [features]
 # The kernel can allocate, so we gate off everything that depends on heap allocation from the bootloader
