--- a/bootloader/Cargo.toml
+++ b/bootloader/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 fixedvec = "0.2"
+bit_field = "0.9"
 bitflags = "1"
 mer = { path = "../lib/mer" }
 x86_64 = { path = "../lib/x86_64" }
