Add skeleton for new efiloader

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -22,3 +22,6 @@ aml = { path = "../lib/acpi/aml", optional = true }
 
 [features]
 arch_x86_64 = ["x86_64", "acpi", "aml", "pebble_util/tuning_fast_ctlz"]
+
+[workspace]
+members = ["efiloader"]
