--- a/kernel/efiloader/Cargo.toml
+++ b/kernel/efiloader/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
-uefi = { version = "0.4", features = ["logger"] }
+uefi = { path = "../../lib/uefi-rs", features = ["logger"] }
