Lay out new boot_info structure
I wanted to redo the boot_info structures we pass from the loader into the
kernel. These should be more platform-agnostic, and so are split into a new
crate (out of the x86_64 crate). These structures are not yet used from the
loader or the kernel.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -24,4 +24,4 @@ aml = { path = "../lib/acpi/aml", optional = true }
 arch_x86_64 = ["x86_64", "acpi", "aml", "pebble_util/tuning_fast_ctlz"]
 
 [workspace]
-members = ["efiloader"]
+members = ["efiloader", "boot_info"]
