--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/IsaacWoods/acpi
 [submodule "lib/uefi-rs"]
 	path = lib/uefi-rs
-	url = git@github.com:IsaacWoods/uefi-rs.git
+	url = https://github.com/IsaacWoods/uefi-rs
 [submodule "lib/ucs2-rs"]
 	path = lib/ucs2-rs
-	url = git@github.com:IsaacWoods/ucs2-rs.git
+	url = https://github.com/IsaacWoods/ucs2-rs
