--- a/kernel/efiloader/Cargo.toml
+++ b/kernel/efiloader/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
-uefi = { path = "../../lib/uefi-rs", features = ["logger"] }
+uefi = { path = "../../lib/uefi-rs" }
 ucs2 = { path = "../../lib/ucs2-rs" }
 boot_info = { path = "../boot_info" }
 mer = { path = "../../lib/mer" }
 x86_64 = { path = "../../lib/x86_64" }
+spin = "0.5"
