--- a/kernel/efiloader/Cargo.toml
+++ b/kernel/efiloader/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 log = "0.4"
 uefi = { path = "../../lib/uefi-rs" }
 ucs2 = { path = "../../lib/ucs2-rs" }
-boot_info = { path = "../boot_info" }
+boot_info_x86_64 = { path = "../boot_info_x86_64" }
 mer = { path = "../../lib/mer" }
 x86_64 = { path = "../../lib/x86_64" }
 spin = "0.5"
