--- a/kernel/efiloader/Cargo.toml
+++ b/kernel/efiloader/Cargo.toml
@@ -5,10 +5,11 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
+hal = { path = "../hal" }
+hal_x86_64 = { path = "../hal_x86_64" }
 log = "0.4"
 uefi = { path = "../../lib/uefi-rs" }
 ucs2 = { path = "../../lib/ucs2-rs" }
-boot_info_x86_64 = { path = "../boot_info_x86_64" }
 mer = { path = "../../lib/mer" }
 x86_64 = { path = "../../lib/x86_64" }
 spin = "0.5"
