Initialize HAL in common and init kernel logger

--- a/kernel/hal_x86_64/Cargo.toml
+++ b/kernel/hal_x86_64/Cargo.toml
@@ -10,6 +10,7 @@ bitflags = "1"
 bit_field = "0.10"
 spin = "0.5"
 pebble_util = { path = "../../lib/pebble_util" }
+log = { version = "0.4", default-features = false }
 
 [features]
 default_features = []
