x86_64: move linker script and target into HAL impl

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,8 +1,8 @@
 .PHONY: kernel_x86_64 efiloader clean
 
 kernel_x86_64: efiloader
-	cargo xbuild --target=$(ARCH)-kernel.json --features arch_$(ARCH)
-	ld --gc-sections -T src/$(ARCH)/link.ld -o $(BUILD_DIR)/fat/kernel.elf target/$(ARCH)-kernel/debug/libkernel.a
+	cargo xbuild --target=hal_$(ARCH)/$(ARCH)-kernel.json --features arch_$(ARCH)
+	ld --gc-sections -T hal_$(ARCH)/link.ld -o $(BUILD_DIR)/fat/kernel.elf target/$(ARCH)-kernel/debug/libkernel.a
 
 efiloader:
 	cargo xbuild --target=x86_64-unknown-uefi --manifest-path efiloader/Cargo.toml
